css layout game: binding controls to css properties, fixes, overflow property

--- a/styles/sandbox/css_layout.css
+++ b/styles/sandbox/css_layout.css
@@ -39,7 +39,7 @@
 
 .property-container {
     display: inline-block;
-    padding-bottom: 5px;
+    padding-bottom: 3px;
 }
 
 .property-editor, option {
